replace reardecommerce with deem

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -102,15 +102,15 @@
           <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
           <li><a href="http://www.deem.com/work">Save</a></li>
           <li><a href="http://www.deem.com/merchant">Sell</a></li>
-          <li><a href="http://www.reardencommerce.com/" target="_blank">Partner</a></li>
+          <li><a href="http://www.deem.com/" target="_blank">Partner</a></li>
           <li><a href="http://blog.deem.com/">Discover</a></li>
           <li><a href="http://www.deem.com/developer">Develop</a></li>
         </ul>
 
         <ul class="right">
-          <li><a href="http://www.reardencommerce.com/" target="_blank">About Us</a></li>
-          <li><a href="http://www.reardencommerce.com/privacy/terms.html" target="_blank">Terms</a></li>
-          <li><a href="http://www.reardencommerce.com/privacy/global-privacy-statement.html" target="_blank">Privacy</a></li>
+          <li><a href="http://www.deem.com/" target="_blank">About Us</a></li>
+          <li><a href="http://www.deem.com/privacy/terms.html" target="_blank">Terms</a></li>
+          <li><a href="http://www.deem.com/privacy/global-privacy-statement.html" target="_blank">Privacy</a></li>
           <li><a href="mailto:needhelp@deem">Feedback</a></li>
         </ul>
       </nav>
