Documentation for Ad Unit V1 API

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -82,6 +82,7 @@
           <li><a href="/v1/users/subscriptions/">User Subscriptions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v1/adunits/">Pre-Packaged Marketing Ad Units</a><span class="icon-arrow-right"></span></li>
         </ul>
       </nav>
 
