--- a/layouts/default.html
+++ b/layouts/default.html
@@ -32,7 +32,7 @@
         <ul>
           <li><a href="http://www.deem.com/developer/">Home</a></li>
           <li><a href="/" class="active">Documentation</a></li>
-          <li><a href="mailto:support@offerengine.com">Support</a></li>
+          <li><a href="mailto:support@deem.com">Support</a></li>
         </ul>
       </nav>
     </div>
