OP-5023 Document reseller coupon endpoint

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -95,6 +95,7 @@
         <h1>V3 Additional Calls</h1>
         <ul>
           <li><a href="/v3/resellers/purchases/">Reseller Purchases</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/resellers/coupons/">Reseller Coupons</a><span class="icon-arrow-right"></span></li>
         </ul>
       </nav>
 
