Reorder "Additional Calls" into a single list by api version

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -60,25 +60,23 @@
           <li><a href="/v1/quick_start/">Quick Start</a><span class="icon-arrow-right"></span></li>
         </ul>
 
-        <h1>V3 Core Calls</h1>
+        <h1>V3</h1>
         <ul>
           <li><a href="/v3/get_deals/">Get Deals</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/resellers/coupons/">Reseller Coupons</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/resellers/purchases/">Reseller Purchases</a><span class="icon-arrow-right"></span></li>
         </ul>
 
-        <h1>V1 Core Calls</h1>
-        <ul>
-          <li><a href="/v1/get_deals/">Get Deals(Deprecated)</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v1/full_purchase/">Execute Purchases</a><span class="icon-arrow-right"></span></li>
-        </ul>
-
-        <h1>V1 Additional Calls</h1>
+        <h1>V1</h1>
         <ul>
           <li><a href="/v1/adunits/">Ad Units</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/deals/">Deals</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v1/full_purchase/">Execute Purchases</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v1/get_deals/">Get Deals(Deprecated)</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -88,15 +86,10 @@
           <li><a href="/v1/users/saved_deals/">User Saved Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/shipping_addresses/">User Shipping Addresses</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/subscriptions/">User Subscriptions</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
         </ul>
 
-        <h1>V3 Additional Calls</h1>
-        <ul>
-          <li><a href="/v3/resellers/purchases/">Reseller Purchases</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v3/resellers/coupons/">Reseller Coupons</a><span class="icon-arrow-right"></span></li>
-        </ul>
       </nav>
 
       <div class="content col9">
