--- a/layouts/default.html
+++ b/layouts/default.html
@@ -26,13 +26,13 @@
   <header class="row">
     <div class="centered clearfix">
       <h1>
-        <a href="http://www.deem.com/developer/"><img src="/shared/images/deem_developers.png" alt="Deem Developers" /></a>
+        <a href="http://www.deem.com/developer/"><img src="/shared/images/deem_logo.png" alt="Deem Developers" /></a>
       </h1>
       <nav>
         <ul>
           <li><a href="http://www.deem.com/developer/">Home</a></li>
           <li><a href="/" class="active">Documentation</a></li>
-          <li><a href="mailto:support@deem.com">Support</a></li>
+          <li><a href="https://www.deem.com/programs/support">Support</a></li>
         </ul>
       </nav>
     </div>
@@ -114,18 +114,16 @@
       <nav>
         <ul class="left">
           <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
-          <li><a href="http://www.deem.com/work">Save</a></li>
-          <li><a href="http://www.deem.com/merchant">Sell</a></li>
-          <li><a href="http://www.deem.com/" target="_blank">Partner</a></li>
+          <li><a href="https://www.deem.com/products/">Products</a></li>
           <li><a href="http://blog.deem.com/">Discover</a></li>
-          <li><a href="http://www.deem.com/developer">Develop</a></li>
+          <li><a href="http://www.deem.com/developer">Developers</a></li>
         </ul>
 
         <ul class="right">
-          <li><a href="http://www.deem.com/" target="_blank">About Us</a></li>
+          <li><a href="https://www.deem.com/company/about" target="_blank">About Us</a></li>
           <li><a href="http://www.deem.com/privacy/terms.html" target="_blank">Terms</a></li>
           <li><a href="http://www.deem.com/privacy/global-privacy-statement.html" target="_blank">Privacy</a></li>
-          <li><a href="mailto:needhelp@deem">Feedback</a></li>
+          <li><a href="https://www.deem.com/programs/support">Feedback</a></li>
         </ul>
       </nav>
       <p>&copy; 1999-2014 Deem, Inc. All rights reserved.</p>
